Bug 14074 - SPARC's libm is broken if all of glibc gets compiled with -frounding-math
Summary: SPARC's libm is broken if all of glibc gets compiled with -frounding-math
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: math (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: 2.16
Assignee: David S. Miller
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-07 20:02 UTC by Andreas Jaeger
Modified: 2014-06-25 11:06 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Jaeger 2012-05-07 20:02:44 UTC
As discussed on libc-alpha, the commit below breaks the math library on SPARC.

commit bd7b0e561f7f684cedfc4adb964569fe9ab16209
Author: Andreas Jaeger <aj@suse.de>
Date:   Sun May 6 09:14:15 2012 +0200

    Build glibc with -frounding-math
    
        * Makeconfig (+math-flags): New, set to -frounding-math.
        (+cflags): Add +math-flags so that all of glibc gets compiled with
        it.

The commit has been reverted to figure out the reason for this on sparc. The goal is to apply the patch again, so we need to see SPARC's libm fixed first.
Comment 1 David S. Miller 2012-05-08 02:43:45 UTC
Fix commited to master.