Fix sparc libm when all of glibc is built with -frounding-math.

[BZ #14074]
	* sysdeps/sparc/sysdep.h (SPARC_PIC_THUNK_CALL): New macro.
	(SETUP_PIC_REG): Use it.
	(SETUP_PIC_REG_LEAF): Use it.